--- a/4104029031/index.html
+++ b/4104029031/index.html
@@ -47,8 +47,8 @@
             <br>Please push the button below!</p>
 
         <p>
-            <img src="pic/beast.png" width="74" height="80">
-            <img src="pic/belle.png" width="74" height="80">
+            <img src="pic/Beast.png" width="74" height="80">
+            <img src="pic/Belle.png" width="74" height="80">
             <br>
             <button class="w3-button w3-hover-blue" onclick="self.location.href='beast.html'">Beast</button>
             <button class="w3-button w3-hover-red" onclick="self.location.href='beauty.html'">Beauty</button>
